<resources>
    <string name="app_name">MBD2-EetNu</string>
    <string name="title">Eet Nu</string>
    <string name="rangeText">Maximale afstand in km van het restaurant</string>
    <string name="rangeKm">10</string>
    <string name="search">Zoeken op restaurant naam</string>
    <string name="searchbtn">Zoeken</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
