<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/title" />

    <TextView
        android:text="@string/rangeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:id="@+id/rangeText"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rangeBar"
        android:layout_below="@+id/rangeText"
        android:layout_alignParentStart="true"
        android:max="25"
        android:layout_toStartOf="@+id/rangeKm" />

    <TextView
        android:text="@string/rangeKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:id="@+id/rangeKm"
        android:layout_alignBottom="@+id/rangeBar"
        android:layout_alignEnd="@+id/rangeText" />

    <TextView
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:id="@+id/searchLabel"
        android:layout_below="@+id/rangeBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchLabel"
        android:inputType="text"
        android:textSize="25sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/searchField" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchField"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="25sp"
        android:text="@string/searchbtn"/>
</RelativeLayout>